# programmer

./: .env.example  .gitignore  README.md  do_things.py  dummy.py  evaluate.py  main.py  pyproject.toml  single_id.txt  test_ids.txt
agents/: agents.md
agents/al-mod/: al-mod.md  main.py  signatures.py
agents/al-mod/dir_caches/: kg-gen-c88908c.xml
agents/al-mod/steps/: a_get_relevant_files.py  b_get_relevant_locations.py  c_get_edits.py  d_rerank.py
agents/al-mod/utils/: ai.py  directory.py  get_repo_structure.py
envs/: envs.md
steps/: localize.py  repair.py  test.py
tasks/: kg-gen-c88908c.jsonl  models.py
